--- a/locale-theme/fr/app.po
+++ b/locale-theme/fr/app.po
@@ -7,31 +7,31 @@
 # msgstr "Make and browse Right to Know (RTI) requests"
 
 msgid "Help pages"
-msgstr "Help pages"
+msgstr "Pages d'aide"
 
 msgid "Introduction"
 msgstr "Introduction"
 
 msgid "Making requests"
-msgstr "Making requests"
+msgstr "Envoyer des demandes"
 
 msgid "Your privacy"
-msgstr "Your privacy"
+msgstr "Votre vie privée"
 
 mgsid "Number of requests"
-msgstr "Number of requests"
+msgstr "Nombre de demandes"
 
 mgsid "Public authorities"
-msgstr "Public authorities"
+msgstr "Autorités publiques"
 
 mgsid "Search for the requested information"
-msgstr "Search for the requested information"
+msgstr "Chercher l'information demandée"
 
 mgsid "Go through the authorities to select one"
-msgstr "Go through the authorities to select one"
+msgstr "Parcourir les autorités pour en sélectionner une"
 
 mgsid "Fill out the application form"
-msgstr "Fill out the application form"
+msgstr "Remplir le formulaire de la demande"
 
 mgsid "Classify the response"
-msgstr "Classify the response"
+msgstr "Classer la response"
